--- a/app/views/WgConfig/index.html
+++ b/app/views/WgConfig/index.html
@@ -16,38 +16,18 @@
 </div>
 {{end}}
 
-<nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-  <div class="navbar-header">
-      <a class="navbar-brand" href="#">菜鸟教程</a>
+<form role="form" action="/WgConfig/SaveAndReastart" method="POST" >
+  <div class="form-group">
+    <textarea class="form-control" rows="20" name="wgconftex">{{.wg0conf}}</textarea>
   </div>
-  <div>
-      <ul class="nav navbar-nav">
-          <li class="active"><a href="#">iOS</a></li>
-          <li><a href="#">SVN</a></li>
-          <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  Java
-                  <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                  <li><a href="#">jmeter</a></li>
-                  <li><a href="#">EJB</a></li>
-                  <li><a href="#">Jasper Report</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">分离的链接</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">另一个分离的链接</a></li>
-              </ul>
-          </li>
-      </ul>
-  </div>
-  </div>
-</nav>
+  <div class="text-center "><input type="submit" class="btn btn-primary" value="保存并重启" /></div>
+  
+</form> 
 
 <form action="/App/Loginout" method="POST">
-    <input type="submit" value="登出" />
+    <input type="submit" class="btn btn-primary" value="登出" />
 </form>
+
 <!-- <div class="container">
   <div class="row">
     <div class="span6">
